exports[`Board rendering should render properly with a title and a single list 1`] = `
<div
  className="my-navbar-top-padding">
  <nav
    className="navbar navbar-default navbar-fixed-top">
    <div
      className="container-fluid">
      <div
        className="navbar-header">
        <span
          className="navbar-brand">
          boardTitle
        </span>
      </div>
      <ul
        className="nav navbar-nav navbar-right"
        role={null}>
        <li
          className=""
          role="presentation"
          style={undefined}>
          <a
            href="#"
            onClick={[Function]}
            role="button">
            <span
              className="glyphicon glyphicon-floppy-disk" />
             Save Board
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}>
          <a
            href="/#"
            onClick={[Function]}>
            <span
              className="glyphicon glyphicon-th-large" />
             Boards
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="my-lists-container">
    <div
      className="my-list-container-item panel panel-default"
      id={undefined}>
      <div
        className="panel-heading">
        list title0
      </div>
      <div
        className="panel-body">
        <button
          className="btn btn-primary btn-block"
          disabled={false}
          onClick={[Function]}
          type="button">
          Add Card
        </button>
      </div>
    </div>
    <form
      className="my-list-container-item"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new list..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;

exports[`Board rendering should render properly with a title and no lists 1`] = `
<div
  className="my-navbar-top-padding">
  <nav
    className="navbar navbar-default navbar-fixed-top">
    <div
      className="container-fluid">
      <div
        className="navbar-header">
        <span
          className="navbar-brand">
          boardTitle
        </span>
      </div>
      <ul
        className="nav navbar-nav navbar-right"
        role={null}>
        <li
          className=""
          role="presentation"
          style={undefined}>
          <a
            href="#"
            onClick={[Function]}
            role="button">
            <span
              className="glyphicon glyphicon-floppy-disk" />
             Save Board
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}>
          <a
            href="/#"
            onClick={[Function]}>
            <span
              className="glyphicon glyphicon-th-large" />
             Boards
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="my-lists-container">
    <form
      className="my-list-container-item"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new list..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;

exports[`Board rendering should render properly with a title and two lists 1`] = `
<div
  className="my-navbar-top-padding">
  <nav
    className="navbar navbar-default navbar-fixed-top">
    <div
      className="container-fluid">
      <div
        className="navbar-header">
        <span
          className="navbar-brand">
          boardTitle
        </span>
      </div>
      <ul
        className="nav navbar-nav navbar-right"
        role={null}>
        <li
          className=""
          role="presentation"
          style={undefined}>
          <a
            href="#"
            onClick={[Function]}
            role="button">
            <span
              className="glyphicon glyphicon-floppy-disk" />
             Save Board
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}>
          <a
            href="/#"
            onClick={[Function]}>
            <span
              className="glyphicon glyphicon-th-large" />
             Boards
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="my-lists-container">
    <div
      className="my-list-container-item panel panel-default"
      id={undefined}>
      <div
        className="panel-heading">
        list title0
      </div>
      <div
        className="panel-body">
        <button
          className="btn btn-primary btn-block"
          disabled={false}
          onClick={[Function]}
          type="button">
          Add Card
        </button>
      </div>
    </div>
    <div
      className="my-list-container-item panel panel-default"
      id={undefined}>
      <div
        className="panel-heading">
        list title1
      </div>
      <div
        className="panel-body">
        <button
          className="btn btn-primary btn-block"
          disabled={false}
          onClick={[Function]}
          type="button">
          Add Card
        </button>
      </div>
    </div>
    <form
      className="my-list-container-item"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new list..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;
